# summongate

./: .gitattributes  .gitignore  CLAUDE.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  DIAG-telegram-emission.md  FIXES_CODEX.md  PLAN-telegram-bridge.md  PRIVACY.md  README.md  ROLE_AC_BUILDER.md  agentscommander-prompt.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  win-nerds-tab-prompt.md
.ac-new/: .gitignore  project-settings.json
.agentscommander/: config.json
.claude/: settings.json  settings.local.json
.husky/: pre-push
_logbooks/: bug__unconnected-agent-messaging.md  fix__acrc-false-positive-detection.md  fix__cli-send-pre-validate-routing.md  fix__session-status-flicker.md  fix__session-status-idle.md  fix__telegram2_codex.md
_plan/: PLAN_git-branch-polling.md  PLAN_rename_to_agentscommander.md
_plans/: 104-copy-paste-embedded-terminal.md  107-auto-brief-title.md  120-rtk-hook-injection-toggle.md  137-brief-cli-verb.md  164-home-screen-docs.md  164-home-screen.md  177-reuse-lowest-free-wg-number.md  183-home-first-startup.md  191-cli-project-open-create.md  192-cli-use-ui-agent-creator.md  199-dev-rust-implementation-report.md  199-grinch-implementation-review.md  199-grinch-plan-review.md  199-messaging-write-permission.md  199-shipper-build-report.md  206-list-peers-working-status.md  212-env-first-credentials.md  212-env-only-credentials-followup.md  71-unified-window-retake.md  86-coord-sort-by-activity-toggle.md  97-replica-item-active-highlight.md  PLAN_direct-messaging-and-root-flag.md  PLAN_statusbar-voice-clear-buttons.md  agent-config-dir.md  branch-name-enforcement.md  (+23 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.prod.conf.json  tauri.stage.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  errors.rs  lib.rs  logging.rs  main.rs  shutdown.rs
src-tauri/src/cli/: brief_append_body.rs  brief_ops.rs  brief_set_title.rs  close_session.rs  create_agent.rs  list_peers.rs  list_sessions.rs  mod.rs  new_project.rs  open_project.rs  send.rs
src-tauri/src/commands/: ac_discovery.rs  agent_creator.rs  brief.rs  config.rs  entity_creation.rs  mod.rs  phone.rs  pty.rs  repos.rs  session.rs  telegram.rs  voice.rs  wg_delete_diagnostic.rs  window.rs
src-tauri/src/config/: agent_config.rs  agent_creation.rs  claude_settings.rs  dark_factory.rs  mod.rs  profile.rs  project_settings.rs  projects.rs  session_context.rs  sessions_persistence.rs  settings.rs  teams.rs
src-tauri/src/phone/: mailbox.rs  manager.rs  messaging.rs  mod.rs  types.rs
src-tauri/src/pty/: credentials.rs  git_watcher.rs  idle_detector.rs  inject.rs  manager.rs  mod.rs  title_prompt.rs  transcript.rs
src-tauri/src/session/: manager.rs  mod.rs  session.rs
src-tauri/src/telegram/: api.rs  bridge.rs  jsonl_watcher.rs  manager.rs  types.rs
src-tauri/src/voice/: tracker.rs
src-tauri/src/web/: auth.rs  broadcast.rs  commands.rs  mod.rs
src-tauri/tests/: cli_brief_logger.rs  cli_close_session.rs  cli_powershell_capture.rs
(+138 files in other folders)
