[package]
name = "summongate"
version = "0.2.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
strip-ansi-escapes = "0.2"
tokio-util = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "summongate_lib"
crate-type = ["lib", "cdylib", "staticlib"]
