[package]
name = "agentscommander-new"
version = "0.8.21"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
tokio-util = "0.7"
vt100 = "0.15"
toml = "0.8"
open = "5"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
futures = "0.3"
rfd = "0.15"
tauri-plugin-dialog = "2.6.0"
which = "7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_RestartManager",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Wdk_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "agentscommander_lib"
crate-type = ["lib", "cdylib", "staticlib"]
